# idx6dof

./: .gitignore  .gitmodules  README.md  idx_command.cpp
Accel_Test/: Accel_Test.ino
Analysis/: Jitter.ipynb
Axis_Enc_Lim_Signal_Gen/: Axis_Enc_Lim_Signal_Gen.ino
Cleaner_Encoder_Read/: Cleaner_Encoder_Read.ino
IDX_Pendant_to_Serial/: IDX_Pendant_to_Serial.ino
LIM_TEST/: LIM_TEST.ino
MCP_Test/: MCP_Test.ino
Pendant_Test/: Pendant_Test.ino  digitalWriteFast.h  idx_pendant.cpp  idx_pendant.h
PowerConroller/: PowerConroller.ino
PowerController/: PowerController.ino
Processing_Arduino_Serial_to_txt/: Processing_Arduino_Serial_to_txt.pde  data.txt
Simple_read_of_Encoders/: Simple_read_of_Encoders.ino
Trainer_v2/: Trainer_v2.ino
accelstepper_test/: accelstepper_test.ino
axis_controller/: axis_controller.ino  (+1 more)
catkin_ws/src/stepper/: CMakeLists.txt  config.yaml
catkin_ws/src/stepper/msg/: MoveCommand.msg
catkin_ws/src/stepper/src/: messages.cpp  serial_example.cc  stepper.cpp
step-generator/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mkdata.py  patch  platformio.ini  test_planner
step-generator/arduino_include/: Arduino.h  trj_stepper.h
step-generator/lib/planner/: trj_jointss.cpp  trj_jointss.h  trj_planner.cpp  trj_planner.h  trj_segment.cpp  trj_segment.h  trj_util.cpp  trj_util.h
step-generator/lib/stepper/src/: trj_bithacks.h  trj_config.h  trj_debug.cpp  trj_debug.h  trj_fastset.h  trj_loop.cpp  trj_loop.h  trj_messageprocessor.cpp  trj_messageprocessor.h  trj_packetserial.h  trj_quad.h  trj_ringbuffer.h  trj_stepper.h
step-generator/message_test/: message_test.ino
step-generator/speed_test/: speed_test.ino
step-generator/src/: main.cpp
step-generator/test-host/: Makefile  test_step_param.cpp
step-generator/test/test_planner/: main.cpp
step-generator/udev/: 50-stepper-rules  udevadmin.info
(+194 files in other folders)
